# LibGlisseo

./: .cproject  .drone.yml  .gitignore  .project  CMakeLists.txt  Doxyfile.in  Makefile.am  README.md  configure.ac  glisseo.cmake  unittest.cmake
debian/: README  changelog  control  copyright  rules
examples/: GlisseoExample01.cpp  GlisseoExample02.cpp  Makefile.am
glisseo/: Autoconf.h.in  Glisseo.cpp  Glisseo.h  Makefile.am  glisseo.pc.in
glisseo/datetime/: LocalDate.cpp  LocalDate.h  LocalDateTime.cpp  LocalDateTime.h  LocalTime.cpp  LocalTime.h  Makefile.am  Weekday.cpp  Weekday.h
glisseo/digest/: Makefile.am  Sha1.cpp  Sha1.h
glisseo/network/: Makefile.am  Protocol.cpp  Protocol.h
glisseo/network/protocol/: GenericJsonOverNetstringClient.cpp  GenericJsonOverNetstringClient.h  GenericJsonOverNetstringServerConnection.cpp  GenericJsonOverNetstringServerConnection.h  GenericJsonRpcClient.cpp  GenericJsonRpcClient.h  GenericJsonRpcServerConnection.cpp  GenericJsonRpcServerConnection.h  GenericNetstringClient.cpp  GenericNetstringClient.h  GenericNetstringServerConnection.cpp  GenericNetstringServerConnection.h  GenericServer.cpp  GenericServer.h  GenericServerConnection.cpp  GenericServerConnection.h  GenericTelnetService.cpp  GenericTelnetService.h  JsonRpc.cpp  JsonRpc.h  JsonRpcErrorResponse.cpp  JsonRpcErrorResponse.h  JsonRpcInvalidParamsException.cpp  JsonRpcInvalidParamsException.h  JsonRpcMethodNotFoundException.cpp  JsonRpcMethodNotFoundException.h  JsonRpcNotification.cpp  JsonRpcNotification.h  JsonRpcResponse.cpp  JsonRpcResponse.h  JsonTags.h  Makefile.am  Messages.h  NetstringDecoder.cpp  NetstringDecoder.h  NetstringEncoder.cpp  NetstringEncoder.h  Slip.cpp  Slip.h  TelnetServer.cpp  (+3 more)
glisseo/network/serial/: Baudrate.cpp  Baudrate.h  Makefile.am  SerialPort.cpp  SerialPort.h
glisseo/network/tcp/: GenericTcp.cpp  GenericTcp.h  GenericTcpConnection.cpp  GenericTcpConnection.h  Makefile.am  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TcpServerConnection.cpp  TcpServerConnection.h
glisseo/network/udp/: GenericUdp.cpp  GenericUdp.h  Makefile.am  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h
glisseo/utils/: ByteArray.cpp  ByteArray.h  Conversion.cpp  Conversion.h  EnumMapper.cpp  EnumMapper.h  GenericDescriptor.cpp  GenericDescriptor.h  GenericThread.cpp  GenericThread.h  Hexdump.cpp  Hexdump.h  Invocation.cpp  Invocation.h  InvocationArgument.cpp  InvocationArgument.h  Join.cpp  Join.h  Log.cpp  Log.h  LogLevel.cpp  LogLevel.h  Makefile.am  Range.cpp  Range.h  Select.cpp  Select.h  Split.cpp  Split.h  String.cpp  String.h  Timer.cpp  Timer.h  Trim.cpp  Trim.h
tests/: Makefile.am  TestConversion.cpp  TestDateTime.cpp  TestEnumMapper.cpp  TestGlisseo.cpp  TestInvocation.cpp  TestJoin.cpp  TestNetstringDecoder.cpp  TestNetstringEncoder.cpp  TestProtocol.cpp  TestRange.cpp  TestSelect.cpp  TestSha1.cpp  TestSplit.cpp  TestTcpClient.cpp  TestTcpServer.cpp  TestTrim.cpp
unittest/: TestConversion.cpp  TestGlisseo.cpp  TestHexdump.cpp  TestNetstringEncoder.cpp  TestRange.cpp  TestSha1.cpp  TestString.cpp  TestTcpClient.cpp  TestTcpServer.cpp  TestTrim.cpp
