AM_CPPFLAGS = \
    -I$(top_srcdir)

noinst_PROGRAMS = \
    glisseo-example-01

glisseo_example_01_SOURCES = \
    GlisseoExample01.cpp

glisseo_example_01_CPPFLAGS = \
    $(AM_CPPFLAGS)

glisseo_example_01_LDADD = \
    $(top_builddir)/glisseo/libglisseo.la

MAINTAINERCLEANFILES = \
    Makefile.in
