AM_CPPFLAGS = \
    -I$(top_srcdir)

noinst_LTLIBRARIES = libglisseo-datetime.la

libglisseo_datetime_la_SOURCES = \
    LocalDate.cpp \
    LocalDate.h \
    LocalDateTime.cpp \
    LocalDateTime.h \
    LocalTime.cpp \
    LocalTime.h

headerdir = $(includedir)/glisseo/datetime
header_HEADERS = \
    LocalDate.h \
    LocalDateTime.h \
    LocalTime.h

MAINTAINERCLEANFILES = \
    Makefile.in
