AM_CPPFLAGS = \
    -I$(top_srcdir)

noinst_LTLIBRARIES = libglisseo-network-serial.la

libglisseo_network_serial_la_SOURCES = \
    Baudrate.cpp \
    Baudrate.h \
    SerialPort.cpp \
    SerialPort.h

headerdir = $(includedir)/glisseo/network/serial
header_HEADERS = \
    Baudrate.h \
    SerialPort.h

MAINTAINERCLEANFILES = \
    Makefile.in
